[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "backportguard"
version = "0.1.0"
description = "GitHub webhook service for backport reminders"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "PyJWT[crypto]>=2.9,<3",
  "PyYAML>=6,<7",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["backportguard*"]
